--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,7 @@
             "@/styles/*": ["styles/*"],
             "@/config/*": ["config/*"],
             "@/helpers/*": ["helpers/*"],
+            "@/context/*": ["context/*"],
         }
     }
 }
